--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "tabular-data-viewer",
+	"name": "tabular-data-viewer",
 	"displayName": "Tabular Data Viewer",
 	"description": "VSCode extension for viewing very large (1-8 GB) tabular data files with CSV, JSON Lines, and Arrow data formats support.",
 	"version": "0.1.0",
 	"engines": {
-		"vscode": "^1.60.0"
+		"vscode": "^1.62.0"
 	},
 	"categories": [
 		"Other"
 	],
 	"activationEvents": [
-    "onCommand:tabular-data-viewer.helloWorld"
+		"onCommand:tabular-data-viewer.helloWorld"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
@@ -33,19 +33,19 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.60.0",
-		"@types/glob": "^7.1.4",
+		"@types/vscode": "^1.62.0",
+		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.0.0",
-		"@types/node": "14.x",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"eslint": "^7.32.0",
-		"glob": "^7.1.7",
-		"mocha": "^9.1.1",
-		"typescript": "^4.4.3",
-		"ts-loader": "^9.2.5",
-		"webpack": "^5.52.1",
-		"webpack-cli": "^4.8.0",
+		"@types/node": "16.11.11",
+		"@typescript-eslint/eslint-plugin": "^5.5.0",
+		"@typescript-eslint/parser": "^5.5.0",
+		"eslint": "^8.3.0",
+		"glob": "^7.2.0",
+		"mocha": "^9.1.3",
+		"typescript": "^4.5.2",
+		"ts-loader": "^9.2.6",
+		"webpack": "^5.64.4",
+		"webpack-cli": "^4.9.1",
 		"@vscode/test-electron": "^1.6.2"
 	}
 }
