--- a/package.json
+++ b/package.json
@@ -64,19 +64,22 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.62.0",
+		"@types/vscode": "^1.63.0",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.0.0",
-		"@types/node": "16.11.11",
-		"@typescript-eslint/eslint-plugin": "^5.5.0",
-		"@typescript-eslint/parser": "^5.5.0",
-		"eslint": "^8.3.0",
+		"@types/node": "14.18.0",
+		"@typescript-eslint/eslint-plugin": "^5.6.0",
+		"@typescript-eslint/parser": "^5.6.0",
+		"eslint": "^8.4.1",
 		"glob": "^7.2.0",
 		"mocha": "^9.1.3",
 		"typescript": "^4.5.2",
 		"ts-loader": "^9.2.6",
-		"webpack": "^5.64.4",
+		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
 		"@vscode/test-electron": "^1.6.2"
+	},
+	"dependencies": {
+		"@vscode/webview-ui-toolkit": "^0.8.4"
 	}
 }
