--- a/package.json
+++ b/package.json
@@ -73,13 +73,14 @@
 		"eslint": "^8.4.1",
 		"glob": "^7.2.0",
 		"mocha": "^9.1.3",
-		"typescript": "^4.5.2",
+		"typescript": "^4.5.3",
 		"ts-loader": "^9.2.6",
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
 		"@vscode/test-electron": "^1.6.2"
 	},
 	"dependencies": {
-		"@vscode/webview-ui-toolkit": "^0.8.4"
+		"@vscode/webview-ui-toolkit": "^0.8.4",
+		"d3-dsv": "^3.0.1"
 	}
 }
