add table view serializer and view state refresh (#11)
with document url to restore table views on vscode reload.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"table view"
 	],
 	"activationEvents": [
-		"onCommand:tabular.data.viewTable"
+		"onCommand:tabular.data.viewTable",
+		"onWebviewPanel:tabular.data.tableView"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
