activate tabular data viewer extension for csv and tsv docs and custom editor views (#12)

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 		"table view"
 	],
 	"activationEvents": [
+		"onLanguage:csv",
+		"onLanguage:tsv",
 		"onCommand:tabular.data.viewTable",
 		"onCustomEditor:tabular.data.tableEditor",
 		"onWebviewPanel:tabular.data.tableView"
