--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
 	},
 	"dependencies": {
 		"@vscode/webview-ui-toolkit": "^0.8.4",
-		"d3-dsv": "^3.0.1"
+		"d3-dsv": "^3.0.1",
+		"tabulator-tables": "^5.0.7"
 	}
 }
