enable tabular data viewer in untrusted workspaces (#13)

--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
 		"onWebviewPanel:tabular.data.tableView"
 	],
 	"main": "./dist/extension.js",
+	"capabilities": {
+		"untrustedWorkspaces": {
+			"supported": true
+		}
+	},
 	"contributes": {
 		"commands": [
 			{
