--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "tabular-data-viewer",
 	"displayName": "Tabular Data Viewer 中",
-	"description": "VSCode extension for viewing very large (1-8 GB) tabular data files with CSV, JSON Lines, and Arrow data formats support.",
-	"version": "0.1.0",
+	"description": "Tabular Data Viewer 🀄 provides custom Table View for .csv, .tsv and .tab data files with Tabulator.",
+	"version": "1.0.0",
 	"engines": {
-		"vscode": "^1.62.0"
+		"vscode": "^1.63.0"
 	},
 	"icon": "resources/icons/tabular-data-viewer.png",
 	"publisher": "RandomFractalsInc",
@@ -32,9 +32,8 @@
 		"tabular data",
 		"data grid 中",
 		"data viewer",
-		"Arrow data",
 		"CSV",
-		"JSON Lines",
+		"TSV",
 		"flat data",
 		"text data",
 		"table view"
@@ -163,20 +162,20 @@
 	},
 	"devDependencies": {
 		"@types/d3-dsv": "^3.0.0",
-		"@types/vscode": "^1.63.0",
+		"@types/vscode": "^1.63.1",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "14.18.0",
-		"@typescript-eslint/eslint-plugin": "^5.6.0",
-		"@typescript-eslint/parser": "^5.6.0",
-		"eslint": "^8.4.1",
+		"@typescript-eslint/eslint-plugin": "^5.8.0",
+		"@typescript-eslint/parser": "^5.8.0",
+		"eslint": "^8.5.0",
 		"glob": "^7.2.0",
 		"mocha": "^9.1.3",
-		"typescript": "^4.5.3",
+		"typescript": "^4.5.4",
 		"ts-loader": "^9.2.6",
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
-		"@vscode/test-electron": "^1.6.2"
+		"@vscode/test-electron": "^2.0.0"
 	},
 	"dependencies": {
 		"@vscode/webview-ui-toolkit": "^0.8.4",
