add /data, /docs/images and other ext. files to .vscodeignore (#5)
for a slimmer tabular data viewer ext. bundle

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -3,10 +3,13 @@
 out/**
 node_modules/**
 src/**
+data/**
+docs/images/**
+
 .gitignore
-.yarnrc
+.github
+
 webpack.config.js
-vsc-extension-quickstart.md
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
