--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,12 @@
 	// for the documentation about the extensions.json format
 	"recommendations": [
 		"dbaeumer.vscode-eslint",
-		"Tobermory.es6-string-html"
+		"Tobermory.es6-string-html",
+		"mechatroner.rainbow-csv",
+		"RandomFractalsInc.vscode-data-preview",
+		"RandomFractalsInc.geo-data-viewer",
+		"RandomFractalsInc.vscode-vega-viewer",
+		"RandomFractalsInc.vscode-data-table",
+		"RandomFractalsInc.vscode-leaflet"
 	]
 }
