--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "tabular-data-viewer",
 	"displayName": "Tabular Data Viewer 中",
 	"description": "Tabular Data Viewer 🀄 provides custom Table View for .csv, .tsv and .tab data files with Tabulator.",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"engines": {
 		"vscode": "^1.63.0"
 	},
@@ -193,6 +193,7 @@
 	"dependencies": {
 		"@vscode/webview-ui-toolkit": "^0.8.4",
 		"d3-dsv": "^3.0.1",
+		"tableschema": "^1.12.4",
 		"tabulator-tables": "^5.0.8"
 	}
 }
