--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
 	},
 	"dependencies": {
 		"@vscode/webview-ui-toolkit": "^0.8.4",
+		"papaparse": "^5.3.1",
 		"tableschema": "^1.12.4",
 		"tabulator-tables": "^5.0.10"
 	}
