update tabular.data.createTableView config setting description in package.json (#90)
to include Perspective view and d3fc charts config options info

--- a/package.json
+++ b/package.json
@@ -237,7 +237,7 @@
 				"tabular.data.createTableViewConfig": {
 					"type": "boolean",
 					"default": true,
-					"description": "Create *.table.json configuration file to save and restore customized Table View 🀄 columns and sort settings."
+					"description": "Create *.table.json configuration file to save and restore customized Table View 🀄 columns, sort settings, Perspective View and D3FC Charts config options."
 				}
 			}
 		}
