--- a/package.json
+++ b/package.json
@@ -272,7 +272,6 @@
 	"dependencies": {
 		"@vscode/webview-ui-toolkit": "^0.9.0",
 		"papaparse": "^5.3.1",
-		"tableschema": "^1.12.4",
-		"tabulator-tables": "^5.0.10"
+		"tableschema": "^1.12.4"
 	}
 }
