--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"D3FC charts 📊📈",
 		"flat data",
 		"large data",
+		"remote data",
 		"text data",
 		"table view",
 		"tabular data view config",
@@ -255,18 +256,18 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.63.1",
+		"@types/vscode": "^1.63.2",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.1.0",
 		"@types/node": "14.18.0",
-		"@typescript-eslint/eslint-plugin": "^5.10.1",
-		"@typescript-eslint/parser": "^5.10.1",
-		"eslint": "^8.7.0",
+		"@typescript-eslint/eslint-plugin": "^5.10.2",
+		"@typescript-eslint/parser": "^5.10.2",
+		"eslint": "^8.8.0",
 		"glob": "^7.2.0",
 		"mocha": "^9.2.0",
 		"typescript": "^4.5.5",
 		"ts-loader": "^9.2.6",
-		"webpack": "^5.67.0",
+		"webpack": "^5.68.0",
 		"webpack-cli": "^4.9.2",
 		"@vscode/test-electron": "^2.1.1"
 	},
