--- a/package.json
+++ b/package.json
@@ -280,9 +280,10 @@
 		"ts-loader": "^9.2.6",
 		"webpack": "^5.68.0",
 		"webpack-cli": "^4.9.2",
-		"@vscode/test-electron": "^2.1.1"
+		"@vscode/test-electron": "^2.1.2"
 	},
 	"dependencies": {
+		"datapackage": "^1.1.10",
 		"papaparse": "^5.3.1",
 		"tableschema": "^1.12.4"
 	}
