correct when clause for datapackage.json files to list data resources (#104)
enables List Data Resource menu options in vscode file explorer and datapackage.json doc title and editor context menus.

--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
 					"group": "navigation"
 				},
 				{
-					"when": "resourceFilename =~ /*(datapackage.json)/",
+					"when": "resourceFilename =~ /datapackage.json/",
 					"command": "tabular.data.listDataResources",
 					"group": "navigation"
 				}
@@ -166,7 +166,7 @@
 					"group": "navigation"
 				},
 				{
-					"when": "resourceFilename =~ /*(datapackage.json)/",
+					"when": "resourceFilename =~ /datapackage.json/",
 					"command": "tabular.data.listDataResources",
 					"group": "navigation"
 				}
@@ -183,7 +183,7 @@
 					"group": "navigation"
 				},
 				{
-					"when": "resourceFilename =~ /*(datapackage.json)/",
+					"when": "resourceFilename =~ /datapackage.json/",
 					"command": "tabular.data.listDataResources",
 					"group": "navigation"
 				}
@@ -200,7 +200,7 @@
 					"group": "navigation"
 				},
 				{
-					"when": "resourceFilename =~ /*(datapackage.json)/",
+					"when": "resourceFilename =~ /datapackage.json/",
 					"command": "tabular.data.listDataResources",
 					"group": "navigation"
 				}
