--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
 				"command": "tabular.data.listDataResources",
 				"title": "List Data Resources",
 				"category": "Tabular Data",
-				"icon": "$(package)"
+				"icon": "$(list-unordered)"
 			},
 			{
 				"command": "tabular.data.openDataFile",
