--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"onCommand:tabular.data.openDataFile",
 		"onCommand:tabular.data.openTextDocument",
 		"onCommand:tabular.data.viewTable",
+		"onCommand:tabular.data.viewDataFileOnGitHub",
 		"onCommand:tabular.data.viewSettings",
 		"onCustomEditor:tabular.data.tableEditor",
 		"onCustomEditor:tabular.data.perspectiveEditor",
@@ -96,6 +97,12 @@
 				"title": "View Table",
 				"category": "Tabular Data",
 				"icon": "$(table)"
+			},
+			{
+				"command": "tabular.data.viewDataFileOnGithub",
+				"title": "View Data File on GitHub",
+				"category": "Tabular Data",
+				"icon": "$(github)"
 			},
 			{
 				"command": "tabular.data.viewSettings",
@@ -177,6 +184,11 @@
 					"when": "tabular.data.view.visible && tabular.data.uri =~ /^(file:///)/",
 					"command": "tabular.data.openTextDocument",
 					"group": "navigation"
+				},
+				{
+					"when": "tabular.data.view.visible && tabular.data.uri =~ /^(https://raw.githubusercontent.com/)/",
+					"command": "tabular.data.viewDataFileOnGithub",
+					"group": "navigation"
 				}
 			],
 			"editor/title": [
@@ -199,6 +211,11 @@
 					"when": "tabular.data.view.visible && tabular.data.uri =~ /^(file:///)/",
 					"command": "tabular.data.openTextDocument",
 					"group": "navigation"
+				},
+				{
+					"when": "tabular.data.view.visible && tabular.data.uri =~ /^(https://raw.githubusercontent.com/)/",
+					"command": "tabular.data.viewDataFileOnGithub",
+					"group": "navigation"
 				}
 			],
 			"commandPalette": [
@@ -220,6 +237,11 @@
 				{
 					"when": "tabular.data.view.visible && tabular.data.uri =~ /^(file:///)/",
 					"command": "tabular.data.openTextDocument",
+					"group": "navigation"
+				},
+				{
+					"when": "tabular.data.view.visible && tabular.data.uri =~ /^(https://raw.githubusercontent.com/)/",
+					"command": "tabular.data.viewDataFileOnGithub",
 					"group": "navigation"
 				}
 			]
